force-app/main/default/objects/CampaignMember/fields/X3rd_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Date__c</fullName>
    <label>3rd - Date</label>
    <type>Date</type>
</CustomField>