force-app/main/default/objects/CampaignMember/fields/X3rd_Participants__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Participants__c</fullName>
    <label>3rd - Participants</label>
    <type>TextArea</type>
</CustomField>