force-app/main/default/objects/CampaignMember/fields/X4th_Comments__c.field-meta.xml
<CustomField>
    <fullName>X4th_Comments__c</fullName>
    <label>4th - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>