force-app/main/default/objects/CampaignMember/fields/X4th_Date__c.field-meta.xml
<CustomField>
    <fullName>X4th_Date__c</fullName>
    <label>4th - Date</label>
    <type>Date</type>
</CustomField>