force-app/main/default/objects/CampaignMember/fields/X4th_Participants__c.field-meta.xml
<CustomField>
    <fullName>X4th_Participants__c</fullName>
    <label>4th - Participants</label>
    <type>TextArea</type>
</CustomField>