force-app/main/default/objects/CampaignMember/fields/ZImportSource__c.field-meta.xml
<CustomField>
    <fullName>ZImportSource__c</fullName>
    <label>ZImportSource</label>
    <length>40</length>
    <type>Text</type>
</CustomField>