force-app/main/default/objects/CampaignMember/fields/ZImportSourceContact__c.field-meta.xml
<CustomField>
    <fullName>ZImportSourceContact__c</fullName>
    <formula>Contact.ZImportSource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZImportSourceContact</label>
    <type>Text</type>
</CustomField>