force-app/main/default/objects/CampaignMember/fields/ZImportSourceLead__c.field-meta.xml
<CustomField>
    <fullName>ZImportSourceLead__c</fullName>
    <formula>Lead.ZImportSource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZImportSourceLead</label>
    <type>Text</type>
</CustomField>