force-app/main/default/objects/CampaignMember/fields/ZUserYesNo__c.field-meta.xml
<CustomField>
    <fullName>ZUserYesNo__c</fullName>
    <formula>IF( 
(OR(  CreatedBy.Id =$User.Id, Contact.OwnerId  = $User.Id)),
1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZUserYesNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>