force-app/main/default/objects/CampaignMember/recordTypes/BLC_Alumnis.recordType-meta.xml
<RecordType>
    <fullName>BLC_Alumnis</fullName>
    <active>true</active>
    <label>BLC - Alumnis</label>
</RecordType>