force-app/main/default/objects/CampaignMember/recordTypes/BLCEvent.recordType-meta.xml
<RecordType>
    <fullName>BLCEvent</fullName>
    <active>true</active>
    <description>Used for events of all kind such as Seminar, Fair, Networking Event</description>
    <label>BLC - Event</label>
</RecordType>