force-app/main/default/objects/CampaignMember/recordTypes/BLCMailing.recordType-meta.xml
<RecordType>
    <fullName>BLCMailing</fullName>
    <active>true</active>
    <description>Used for News, Information, Letters, Email, ...</description>
    <label>BLC - Mailing</label>
</RecordType>