force-app/main/default/objects/CampaignMember/recordTypes/CorporateCandidate.recordType-meta.xml
<RecordType>
    <fullName>CorporateCandidate</fullName>
    <active>false</active>
    <description>Used to track candidate</description>
    <label>CS - Candidate</label>
</RecordType>