force-app/main/default/objects/CampaignMember/recordTypes/XBKompendiumBetaTest.recordType-meta.xml
<RecordType>
    <fullName>XBKompendiumBetaTest</fullName>
    <active>false</active>
    <label>XB - Kompendium Beta Test</label>
</RecordType>