force-app/main/default/objects/CampaignMember/validationRules/CM001_Confirmation_Email_Checkbox_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>CM001_Confirmation_Email_Checkbox_Active</fullName>
    <active>true</active>
    <description>The Confirmation Email Checkbox can not be set to inactive anymore</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
Campaign.RecordType.Id =&quot;012b0000000cObz&quot;,
 PRIORVALUE(Send_Confirmation_Email__c)=true,
 ISCHANGED( Send_Confirmation_Email__c ) 
)</errorConditionFormula>
    <errorDisplayField>Send_Confirmation_Email__c</errorDisplayField>
    <errorMessage>You can not change this value back - the email has been sent.</errorMessage>
</ValidationRule>