force-app/main/default/objects/CampaignMember/validationRules/CM002_Status_not_changed_manually.validationRule-meta.xml
<ValidationRule>
    <fullName>CM002_Status_not_changed_manually</fullName>
    <active>true</active>
    <description>Recruiting member status is automatically set by workflow rules</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
Campaign.RecordType.Id =&quot;012b0000000cObz&quot;,
 ISCHANGED(Status) 
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>The status is automatically set via workflow rules depending on the different stage date fields.</errorMessage>
</ValidationRule>